# CoffeeOracle

./: .dockerignore  .dockerignore   .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  rxconfig.py  streamlit_app.py  test-backend.sh  test_backend_stream.py
.tmp/external-context/: .manifest.json
.tmp/external-context/home-assistant/: lovelace-dashboards-and-battery-monitoring.md
.tmp/sessions/2026-04-12-go-next-stack/: context.md
.tmp/tasks/go-next-stack/: subtask_01.json  subtask_02.json  subtask_03.json  subtask_04.json  subtask_05.json  subtask_06.json  subtask_07.json  subtask_08.json  task.json
CoffeeOracle/: CoffeeOracle.py
backend/: Makefile  README.md  env.example.txt  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/logger/: logger.go
backend/internal/oracle/: models.go  service.go  service_test.go  validator.go  validator_test.go
backend/tests/: oracle_integration_test.go
docker/: start.sh
docs/: go-next-stack.md  project-verstaendnis-referenzen.md
frontend/: eslint.config.mjs  jest.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/__tests__/: layout.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HeroActions.tsx  OracleExperience.tsx  ResultsPanel.tsx  UploadForm.tsx
frontend/design_iterations/: coffee-oracle-ui.md
frontend/hooks/: useOracleStream.ts
frontend/lib/: env.ts
frontend/tests/: oracleClient.test.ts
tests/backend/: test_oracle_api.py
(+8 files in other folders)
