# Python package metadata used by tooling in this repository.
[project]
name = "coffeeoracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.16.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "streamlit>=1.41.0",
]

# Optional dependency groups (install with extras, e.g. `.[test]`).
[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
